sas-core/main/default/objects/SMS__c/fields/definitionId__c.field-meta.xml
<CustomField>
    <fullName>definitionId__c</fullName>
    <label>DefinitionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>