sas-core/main/default/objects/SMS__c/fields/eid__c.field-meta.xml
<CustomField>
    <fullName>eid__c</fullName>
    <label>EID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>