sas-core/main/default/objects/SMS__c/fields/info_shortCode__c.field-meta.xml
<CustomField>
    <fullName>info_shortCode__c</fullName>
    <label>Info_shortCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>