sas-core/main/default/objects/SMS__c/fields/info_status__c.field-meta.xml
<CustomField>
    <fullName>info_status__c</fullName>
    <label>info_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>