sas-core/main/default/objects/SMS__c/fields/mid__c.field-meta.xml
<CustomField>
    <fullName>mid__c</fullName>
    <label>MID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>