sas-core/main/default/objects/SMS__c/fields/timeUTC__c.field-meta.xml
<CustomField>
    <fullName>timeUTC__c</fullName>
    <label>timeUTC</label>
    <type>Time</type>
</CustomField>